--- a/css/main.css
+++ b/css/main.css
@@ -1236,7 +1236,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #ff1b09;
+  background: #044dd0;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
