--- a/css/main.css
+++ b/css/main.css
@@ -1261,7 +1261,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #47f917;
+  background: #f2c13e;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
